--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,216 @@
-.App {
-  text-align: center;
+html {
+  background: black;
+  scroll-behavior: smooth;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+a {
+  color: white;
+  text-decoration: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+.hero {
+  /* background: linear-gradient(#03163b 0%, #03163b 15%, rgb(218, 218, 218) 15%, rgb(255, 255, 255) 50%, #03163b 50%); */
+  background: #01091a;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  min-height: 95vh;
+  display: grid;
+  grid-template-columns: 3fr 2fr;
+  grid-template-rows: 1fr 1fr;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.title-1 {
+  text-align: end;
+  border-top: 2px solid white;
+  border-bottom: 2px solid white;
+  font-size: 60px;
+  padding: 20px;
+  background: #000000;
+  margin-top: 150px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.title-2 {
+  border-top: 2px solid white;
+  border-bottom: 2px solid white;
+  font-size: 40px;
+  background: #181818;
+  color: white;
+  padding: 8px;
+  margin-top: 140px;
+}
+
+.learn-more {
+  grid-row: 2;
+  grid-column: 1 / -1;
+}
+
+.learn-box {
+  font-size: 30px;
+  transition: 0.5s;
+  max-width: 160px;
+  text-align: center;
+  margin: auto;
+  border: 5px double white;
+  border-radius: 10px;
+}
+
+.learn-box:hover {
+  transition: 0.5s;
+  max-width: 220px;
+  background: rgb(3, 81, 248);
+}
+
+.headshot {
+  width: 150px;
+}
+
+.headshot-container {
+  margin-top: -40px;
+  margin-left: 20px;
+  width: 150px;
+  height: 181px;
+  border: 1px solid black;
+}
+
+#about {
+  width: 80%;
+  margin: 30px auto;
+  padding: 30px;
+  background: rgb(27, 27, 27);
+  color: white;
+  display: grid;
+  align-items: center;
+  grid-template-columns: 1fr 3fr;
+  border-radius: 20px;
+}
+
+.about-info {
+  font-weight: 800;
+  margin-left: 20px;
+}
+
+#about h2 {
+  text-align: center;
+  grid-column: 1 / -1;
+}
+
+#rails {
+  margin-top: 5px;
+  width: 37px;
+}
+
+#html-css {
+  margin-top: 5px;
+  width: 80px;
+}
+
+.tech-stack {
+  margin: auto;
+  background: rgb(48, 48, 48);
+  color: white;
+  font-weight: 800;
+  display: grid;
+  text-align: center;
+  min-width: 300px;
+  /* border-radius: 20px; */
+}
+
+.tech-stack h3 {
+  font-size: 30px;
+}
+
+.tech-stack p {
+  padding: 10px;
+}
+
+.stack {
+  margin: auto;
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+}
+
+#react {
+  width: 45px;
+}
+
+.tech-container {
+  margin: auto;
+  width: 80%;
+}
+
+.projects {
+  grid-column: 1 / -1;
+  background: #01091a;
+  color: white;
+}
+
+.projects-section {
+  grid-column: 1 / -1;
+  background: #01091a;
+  color: white;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+.projects-head {
+  grid-row: 1 / 2;
+  grid-column: 1 / -1;
+  text-align: center;
+  font-size: 30px;
+}
+
+.project-container {
+  background: rgb(1, 26, 78);
+  border: 1px solid;
+  text-align: center;
+  padding: 10px;
+}
+
+.project-container img {
+  width: 300px;
+}
+
+@media (min-width: 1255px) {
+  .hero {
+    grid-column: 1 / -1;
   }
-  to {
-    transform: rotate(360deg);
+
+  .title-2 {
+    padding: 31px;
+  }
+
+  .tech-container {
+    display: block;
+    margin-right: 0px;
+  }
+
+  .tech-stack {
+    border-radius: 0;
+    max-width: 400px;
+  }
+
+  .App {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+
+  #about {
+    width: 100%;
+    /* height: 0%; */
+    margin: 0 0 0 150px;
+    border-radius: 0;
+  }
+
+  .projects-container {
+    margin-top: 0;
+  }
+
+  .projects-section {
+    width: 60%;
+    margin: auto;
   }
 }
