--- a/src/App.css
+++ b/src/App.css
@@ -143,6 +143,7 @@ a {
 }
 
 .projects {
+  text-align: center;
   grid-column: 1 / -1;
   background: #01091a;
   color: white;
@@ -168,6 +169,22 @@ a {
   border: 1px solid;
   text-align: center;
   padding: 10px;
+  /* display: grid;
+  justify-content: center;
+  align-items: center; */
+}
+
+.project-container button {
+  transition: 0.5s;
+  margin-left: 10px;
+  border: none;
+  background: black;
+  color: white;
+}
+
+.project-container button:hover {
+  transition: 0.5s;
+  background: darkgray;
 }
 
 .project-container img {
@@ -212,5 +229,33 @@ a {
   .projects-section {
     width: 60%;
     margin: auto;
+  }
+}
+
+@media (max-width: 741px) {
+  .title-2 {
+    margin-top: 135px;
+    font-size: 34px;
+    padding-bottom: 22px;
+  }
+
+  .projects-section {
+    grid-template-columns: 1fr;
+  }
+}
+
+@media (max-width: 700px) {
+  .title-1 {
+    border-right: 15px solid;
+    margin-top: 135px;
+    font-size: 35px;
+    padding: 0px;
+  }
+
+  .title-2 {
+    border-left: 15px solid;
+    margin-top: 275px;
+    font-size: 20px;
+    padding: 0px;
   }
 }
