--- a/src/App.css
+++ b/src/App.css
@@ -155,6 +155,8 @@ a {
   color: white;
   display: grid;
   grid-template-columns: 1fr 1fr;
+  grid-gap: 20px;
+  margin-top: 20px;
 }
 
 .projects-head {
