--- a/src/App.css
+++ b/src/App.css
@@ -27,6 +27,7 @@ a {
   text-align: end;
   border-top: 2px solid white;
   border-bottom: 2px solid white;
+  border-right: 15px solid;
   font-size: 60px;
   padding: 20px;
   background: #000000;
@@ -36,11 +37,13 @@ a {
 .title-2 {
   border-top: 2px solid white;
   border-bottom: 2px solid white;
-  font-size: 40px;
   background: #181818;
   color: white;
   padding: 8px;
-  margin-top: 140px;
+  border-left: 15px solid;
+  margin-top: 300px;
+  font-size: 36px;
+  padding: 0px;
 }
 
 .learn-more {
@@ -124,7 +127,7 @@ a {
 }
 
 .tech-stack p {
-  padding: 10px;
+  padding: 15px;
 }
 
 .stack {
@@ -176,9 +179,15 @@ a {
   align-items: center; */
 }
 
+.project-title {
+  font-size: 26px; 
+  font-weight: 900;
+}
+
 .project-container button {
   transition: 0.5s;
   margin-left: 10px;
+  margin-bottom: 10px;
   border: none;
   background: black;
   color: white;
@@ -198,9 +207,9 @@ a {
     grid-column: 1 / -1;
   }
 
-  .title-2 {
+  /* .title-2 {
     padding: 31px;
-  }
+  } */
 
   .tech-container {
     display: block;
@@ -250,14 +259,14 @@ a {
   .title-1 {
     border-right: 15px solid;
     margin-top: 135px;
-    font-size: 35px;
+    font-size: 40px;
     padding: 0px;
   }
 
   .title-2 {
     border-left: 15px solid;
-    margin-top: 275px;
-    font-size: 20px;
+    margin-top: 255px;
+    font-size: 21px;
     padding: 0px;
   }
 }
