--- a/src/App.css
+++ b/src/App.css
@@ -157,40 +157,88 @@ a {
   background: #01091a;
   color: white;
   display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-gap: 20px;
+  grid-template-columns: 1fr;
+  grid-gap: 80px;
   margin-top: 20px;
 }
+
 
 .projects-head {
   grid-row: 1 / 2;
   grid-column: 1 / -1;
   text-align: center;
-  font-size: 30px;
+  font-size: 40px;
 }
 
 .project-container {
-  background: rgb(38, 41, 47);
-  border: 1px solid;
+  /* background: rgb(38, 41, 47); */
+  background: rgb(31, 30, 30);
+  width: 100%;
+  border-top: 1px solid;
+  border-bottom: 1px solid;
   text-align: center;
   padding: 10px;
-  /* display: grid;
-  justify-content: center;
-  align-items: center; */
+  display: grid;
+  justify-items: center;
+  align-content: center;
+  grid-template-columns: 1fr 1fr;
 }
 
 .project-title {
-  font-size: 26px; 
+  text-align: right;
+  border-top: 1px solid;
+  border-bottom: 1px solid;
+  border-right: 10px solid;
+  margin-left: -10px;
+  justify-self: start;
+  width: 80%;
+  background: rgb(10, 10, 10);
+  padding: 10px;
+  font-size: 36px; 
   font-weight: 900;
+}
+
+.project-desc {
+  padding: 10px;
+  text-align: left;
+  grid-row: 2 / 3;
+  grid-column: 2;
+}
+
+.project-bio {
+  padding: 10px;
+  text-align: start;
+  margin-top: 43px;
+  border-bottom: 1px solid gray;
+  right: 0;
 }
 
 .project-container button {
   transition: 0.5s;
   margin-left: 10px;
-  margin-bottom: 10px;
+  /* margin-bottom: 10px; */
+  font-size: 15px;
   border: none;
+  width: 150px;
+  height: 60px;
+  border-radius: 15px;
   background: black;
   color: white;
+}
+
+.project-pic {
+  grid-row: 2;
+}
+
+.chess-pic {
+  width: 340px !important;
+  align-self: center !important;
+  grid-row: 2;
+}
+
+.btn-container {
+  grid-column: 1;
+  margin-top: 20px;
 }
 
 .project-container button:hover {
@@ -233,13 +281,18 @@ a {
     border-radius: 0;
   }
 
-  .projects-container {
-    margin-top: 0;
+  .project-container {
+    border: 1px solid;
   }
 
   .projects-section {
-    width: 60%;
+    width: 80%;
     margin: auto;
+  }
+
+  .project-title {
+    width: 67%;
+    height: 50px;
   }
 }
 
@@ -252,6 +305,10 @@ a {
 
   .projects-section {
     grid-template-columns: 1fr;
+  }
+
+  .project-container {
+    display: block;
   }
 }
 
