--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@ a {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
-  min-height: 95vh;
+  height: 60vh;
   display: grid;
   grid-template-columns: 3fr 2fr;
   grid-template-rows: 1fr 1fr;
@@ -31,7 +31,7 @@ a {
   font-size: 60px;
   padding: 20px;
   background: #000000;
-  margin-top: 150px;
+  /* margin-top: 150px; */
 }
 
 .title-2 {
@@ -41,7 +41,7 @@ a {
   color: white;
   padding: 8px;
   border-left: 15px solid;
-  margin-top: 300px;
+  margin-top: 200px;
   font-size: 36px;
   padding: 0px;
 }
@@ -68,14 +68,14 @@ a {
 }
 
 .headshot {
-  width: 150px;
+  width: 160px;
 }
 
 .headshot-container {
   margin-top: -40px;
   margin-left: 20px;
-  width: 150px;
-  height: 181px;
+  width: 160px;
+  height: 147px;
   border: 1px solid black;
 }
 
