--- a/src/App.css
+++ b/src/App.css
@@ -69,9 +69,8 @@ a {
 }
 
 .headshot {
-  width: 190px;
-  height: 190px;
-  object-fit: cover;
+  width: 160px;
+  margin-top: -80px;
 }
 /* 
 .headshot-container {
@@ -344,6 +343,10 @@ a {
   .projects-section {
     /* width: auto; */
     margin: auto;
+  }
+
+  .headshot {
+    margin-top: -100px;
   }
 
   .project-title {
